Fri May 12 23:23:06 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/documents.c libxslt/namespaces.c
	  libxslt/preproc.c libxslt/transform.c
	  libxslt/xslt.c libxslt/xsltInternals.h libxslt/xsltutils.c:
	  Next step of refactoring. For more details see bug #341588.
	  I applied the suggestion of Jerome Pesenti to the refactored
	  (still IDFEDed out with XSLT_REFACTORED) code: The XPath
	  compilation context (accessible via the compilation context)
	  is now reused for compilation of expressions at
	  compilation-time; this should reduce compilation time to 50%
	  for avarage stylesheets.

Thu May 11 22:12:22 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/extensions.c: Changed a comment to indicate that a
	  specific bug was already fixed.
	  
Fri May  5 23:10:47 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/xsltInternals.h libxslt/attributes.c
	  libxslt/documents.c libxslt/extensions.c
	  libxslt/extensions.h libxslt/functions.c
	  libxslt/imports.c libxslt/keys.c libxslt/preproc.c
	  libxslt/transform.c libxslt/variables.c libxslt/xslt.c
	  libxslt/xsltutils.c libxslt/xsltutils.h libexslt/functions.c:
	  Next step of refactoring (plus some bug-fixes).
	  For more details see #340780.

Fri May  5 14:31:53 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* tests/exslt/common/node-set.5.out
	  tests/exslt/sets/difference.1.out
	  tests/exslt/functions/function.6.out: Reverting the
	  changes; I'll rather change the processing stylesheet
	  documents in a way that they will produce the same results
	  for broken and stricter whitespace-stripping.

Thu May  4 22:55:26 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* tests/exslt/common/node-set.5.out
	  tests/exslt/sets/difference.1.out
	  tests/exslt/functions/function.6.out: Changed regression test
	  results (bug #340684). Those will now produce regression
	  errors; so we need to fix the processor.
