@@ -1,3 +1,8 @@
+Mon May 15 22:32:13 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>
+
+	* libxslt/namespaces.c libxslt/attributes.c:
+	  Fixed bug #302020, reported by Thomas Blatter.
+
 Fri May 12 23:23:06 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>
 
 	* libxslt/documents.c libxslt/namespaces.c
